@@ -42,8 +42,11 @@ class tslib_content_Text extends tslib_content_Abstract {
 	 * @return	string		Output
 	 */
 	public function render($conf = array()) {
-		$content = $conf['value'];
-		unset($conf['value']);
+		$content = '';
+		if (is_array($conf) && isset($conf['value'])) {
+			$content = $conf['value'];
+			unset($conf['value']);
+		}
 		if(count($conf)) {
 			$content = $this->cObj->stdWrap($content, $conf);
 		}
